# contracts/openapi.yaml
@@ -178,6 +178,10 @@ paths:
     $ref: './paths/service.yaml#/APIRoot'
   /v1/admin/administrators:
     $ref: './paths/admin.yaml#/AdminAdministrators'
+  /v1/admin/jobs:
+    $ref: './paths/admin.yaml#/AdminJobs'
+  /v1/admin/jobs/{id}:
+    $ref: './paths/admin.yaml#/AdminJob'
   /v1/admin/me:
     $ref: './paths/admin.yaml#/AdminMe'
   /v1/admin/moderation/exceptions:
